RESOLVED FIXED80510
Web Inspector crash (iCab)
https://bugs.webkit.org/show_bug.cgi?id=80510
Summary Web Inspector crash (iCab)
trinler
Reported 2012-03-07 06:27:05 PST
Created attachment 130611 [details] two iCab crashlogs (r110001 and r110047) Steps to reproduce (r110001): - in iCab open blank page - open Inspector - close inspector => crash Steps to reproduce (r110047): - in iCab open blank page - open Inspector => crash crash happens only in iCab, not reproducible with Safari. no problems with r109934, problem started with r110001.
Attachments
two iCab crashlogs (r110001 and r110047) (18.97 KB, application/zip)
2012-03-07 06:27 PST, trinler
no flags
[PATCH] Proposed Fix (1.17 KB, patch)
2012-03-07 14:29 PST, Joseph Pecoraro
no flags
Alexey Proskuryakov
Comment 1 2012-03-07 11:34:30 PST
Thread 0 Crashed: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x0000000100cbd3ea WebCore::InspectorFrontendClientLocal::canAttachWindow() + 10 1 com.apple.WebKit 0x00000001002f8a82 WebInspectorClient::didResizeMainFrame(WebCore::Frame*) + 18 2 com.apple.WebCore 0x0000000100b53bd3 WebCore::FrameView::layout(bool) + 2643 3 com.apple.WebKit 0x00000001002eb1b5 -[WebHTMLView layoutToMinimumPageWidth:height:originalPageWidth:originalPageHeight:maximumShrinkRatio:adjustingViewSize:] + 341 4 com.apple.WebKit 0x00000001002b7d71 -[WebDynamicScrollBarsView(WebInternal) updateScrollers] + 161 ...
Joseph Pecoraro
Comment 2 2012-03-07 11:50:28 PST
I just added didResizeMainFrame in r109939, so this is likely due to what I just added. I'll take a look.
Joseph Pecoraro
Comment 3 2012-03-07 14:29:28 PST
Created attachment 130694 [details] [PATCH] Proposed Fix Took me more than a couple full builds to test the WK1 path properly. Sorry about that!
WebKit Review Bot
Comment 4 2012-03-07 15:31:17 PST
Comment on attachment 130694 [details] [PATCH] Proposed Fix Clearing flags on attachment: 130694 Committed r110116: <http://trac.webkit.org/changeset/110116>
WebKit Review Bot
Comment 5 2012-03-07 15:31:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.