<http://webkit.org/b/80510> Web Inspector crash (iCab)

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-03-07
Reviewed by Timothy Hatcher.

* WebCoreSupport/WebInspectorClient.mm:
(WebInspectorClient::didResizeMainFrame):

Canonical link: https://commits.webkit.org/97724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110116 268f45cc-cd09-0410-ab3c-d52691b4dbfc